# claude_code_api

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHATBOT_REALTIME_STATUS.md  CLAUDE.md  CLAUDE_ODOO_SYSTEM_PROMPT.md  Dockerfile  Makefile  NETSUITE_ACCESS_REPORT.md  NETSUITE_ACCESS_SUMMARY.md  ODOO_INTEGRATION.md  README.md  SALES_ANALYSIS.md  SAVED_SEARCHES_FINAL_REPORT.md  SAVED_SEARCH_ACCESS_REPORT.md  SOAP_API_REQUIREMENTS.md  TRANSACTION_FIELDS.md  TRANSACTION_SCHEMA.md  analyze_netsuite_tables.py  build-docker.sh  claude-config.json  comprehensive_retest.py  count_products.py  debug_rest_api.py  debug_tool_tracking.py  discover_netsuite_schema.py  discover_transaction_schema.py  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  fetch_netsuite_data.py  filled_pr_template.md  get_transaction_fields.py  list_saved_searches_fixed.py  list_saved_searches_soap.py  netsuite_deep_analysis.json  (+47 more)
.claude/: commands
.claude/agents/: researcher.yaml
.cursor/: rules
.github/: pull_request_template.md
chatbot-frontend/: package-lock.json  package.json
chatbot-frontend/public/: index.html
chatbot-frontend/src/: App.backup.tsx  App.css  App.tsx  RealtimeApp.tsx  StreamingApp.tsx  index.css  types.ts
docs/: README_SIMPLIFIED.md
docs/memory-bank/: ARCHITECTURE.md  CODEBASE_STRUCTURE.md  DECISIONS.md  DESIGN.md  INFRASTRUCTURE.md  PRD.md  PROJECT_BRIEF.md
docs/rules/: README.md
docs/rules/00-architecture/: 0-hexagonal-architecture.mdc
docs/rules/01-standards/: 1-api-design.mdc  (+1 more)
docs/tasks/: 2025_01_14-simplified-claude-api.md  2025_08_12-claude-sdk-api.md
examples/: claude_code_example.py  python_client.py  react_integration.tsx  simple_api.py  streaming_demo.py
frontend/: README.md  chatbot.html  index.html  serve.py
odoo_templates/: .env  02_crud_operations.py  03_search_and_filter.py  04_product_management.py  05_sales_orders.py  06_invoicing.py  07_batch_operations.py  ODOO_API_GUIDE.md  README.md  odoo_connection.py
src/claude_sdk_server/: __init__.py  main.py
tests/: conftest.py  test_logging_config.py  test_simple_api.py  test_simplified_api.py
tests/integration/: test_claude_api.py
tests/unit/: test_claude_service.py
(+34 files in other folders)
