[project]
name = "claude-sdk-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Yoan Gabison", email = "yoan.gabison@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.3",
    "httpx>=0.27.0",
    "redis>=5.2.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "sse-starlette>=2.1.3",
    "pydantic-settings>=2.7.0",
    "claude-code-sdk>=0.0.20",
    "aiohttp>=3.12.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
