[project]
name = "claude-sdk-server"
version = "1.0.0"
description = "Minimal Claude SDK API Server"
readme = "README.md"
authors = [
    { name = "Yoan Gabison", email = "yoan.gabison@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.5",
    "claude-code-sdk>=0.0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sdk_server"]