[project]
name = "claude-sdk-server"
version = "1.0.0"
description = "Minimal Claude SDK API Server"
readme = "README.md"
authors = [
    { name = "Yoan Gabison", email = "yoan.gabison@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.5",
    "claude-code-sdk>=0.0.20",
    "atla-insights[claude-code-sdk]>=0.0.20",
    "logfire[fastapi]>=4.3.3",
    "loguru>=0.7.3",
    "httpx>=0.28.1",
    "rich>=14.1.0",
    "sse-starlette>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sdk_server"]

[tool.ruff]
include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
